Removed processed and added inaccuracy option for Pearler Zombies